fix: add baseUrl to tsconfig for module resolution

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,6 +27,7 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "skipLibCheck": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
